--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,10 @@
 @import './base.css';
 
+#logot{
+    margin-left: 10px;
+    color:white;
+}
+
 /* #app {
   max-width: 1280px;
   margin: 0 auto;
