:lipstick: update style

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,6 +9,10 @@ a {
     text-decoration: none;
 }
 
+.el-card__header{
+    text-align: center;
+}
+
 /* #app {
   max-width: 1280px;
   margin: 0 auto;
