--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -13,6 +13,13 @@ a {
     text-align: center;
 }
 
+strong {
+    font-weight: bold;
+}
+
+.el-image__wrapper {
+    position: unset;
+}
 /* #app {
   max-width: 1280px;
   margin: 0 auto;
