--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,18 @@ strong {
 .el-image__wrapper {
     position: unset;
 }
+
+.highlight {
+    background-color: #E5989B;
+    color: white;
+    margin: 2px;
+    padding: 0 2px 0 2px;
+    border-radius: 5px;
+}
+
+.el-link__inner:has(font) {
+    display: unset;
+}
 /* #app {
   max-width: 1280px;
   margin: 0 auto;
